tests/errors/non_iterable_membership.py
# expect_error: TypeError
# expect_error: argument of type 'int' is not iterable
print(1 in 2)